# gh-action-datapane-poetry

./: pyproject.toml
.github/workflows/: blank.yml
reports/: dp_script.py
