[tool.poetry]
name = "gh-action-datapane-poetry"
version = "0.1.0"
description = ""
authors = ["Anthony <anthony@datapane.com>"]

# testing against this: https://github.com/m-oxu/ayala/blob/4696f8c85813b3751ea12b19d27144eba57b5283/pyproject.toml
[tool.poetry.dependencies]
python = ">=3.9,<3.11.0"
tweepy = "^4.8.0"
python-dotenv = "^0.20.0"
mysql-connector-python = "^8.0.28"
psycopg2-binary = "^2.9.3"
pandas = "^1.4.2"
python-telegram-bot = "13.11"
snscrape = "^0.4.3.20220106"
sqlalchemy = "^1.4.36"
datapane = "^0.14.0"
unidecode = "1.3.4"
wordcloud = "1.8.1"
yellowbrick = "1.4"
scikit-learn = "1.0.2"
plotly = "5.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
